--- a/assets/junk/startertemplate.css
+++ b/assets/junk/startertemplate.css
@@ -18,3 +18,55 @@
   top: 0;
   left: 0;
 }
+
+/* Flex based responsive columns  */
+.columns {
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: center;
+  margin: 5px 0;
+}
+
+
+.column {
+  flex: 1;
+  margin: 2px;
+  padding: 30px;
+}
+
+.column:first-child {
+  margin-left: 0;
+}
+
+.column:last-child {
+  margin-right: 0;
+}
+
+footer {
+  padding: 0 15px;
+}
+
+@media screen and (max-width: 980px) {
+  .columns .column {
+    margin-bottom: 5px;
+    flex-basis: 40%;
+  }
+
+  .columns .column:nth-last-child(2) {
+    margin-right: 0;
+  }
+
+  .columns .column:last-child {
+    flex-basis: 100%;
+    margin: 0;
+  }
+}
+
+@media screen and (max-width: 680px) {
+  .columns .column {
+    flex-basis: 100%;
+    margin: 0 0 5px 0;
+  }
+}
+
+/* End Flex based responsive columns  */
